<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".fragment.main.YourLibraryFragment">

    <TextView
        android:id="@+id/tv_your_library"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:text="@string/str_your_library"
        android:textColor="@color/white"
        android:textSize="23sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:animateLayoutChanges="true">

            <EditText
                android:id="@+id/et_search_liked_library"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:drawableStart="@drawable/icon_search"
                android:hint="   Find in liked playlists"
                android:imeOptions="actionSearch"
                android:padding="3dp"
                android:singleLine="true"
                android:textColorHint="#90FFFFFF"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/iv_bar"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_marginEnd="10dp"
                android:src="@drawable/icon_filter"
                app:tint="@color/white" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:padding="5dp">

        <TextView
            android:id="@+id/tv_count_playlist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_12"
            android:textColor="#90FFFFFF"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/str_playlists"
            android:textColor="#90FFFFFF"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:padding="5dp">

        <androidx.cardview.widget.CardView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/back_kvadrat_plus"
            android:backgroundTint="@color/plus_color">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:src="@drawable/icon_plus" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:text="@string/str_new_playlist"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="5dp">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:src="@drawable/icon_arrow_up_down" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:text="@string/str_recently_played"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_your_library"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        tools:listitem="@layout/item_your_library"
        app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
        android:orientation="vertical" />

</LinearLayout>